fix z-index

--- a/src/scss/blocks/_hero.scss
+++ b/src/scss/blocks/_hero.scss
@@ -18,6 +18,7 @@
   }
 
   &__title {
+    white-space: nowrap;
     text-fill-color: $white; // Use for Safari
     -webkit-text-fill-color: $white; // Use for Chrome
     -webkit-text-stroke: 1px to.rem() $black; // Use for Chrome
@@ -49,6 +50,8 @@
 
   &__top {
     grid-area: 1 / 1 / 2 / span 8;
+    position: relative;
+    z-index: 1000;
   }
 
   &__bottom {
@@ -65,6 +68,8 @@
     }
     &-bottom {
       grid-area: 2 / 1 / 3 / span 9;
+      position: relative;
+      z-index: -1;
     }
 
     &-wrapper-top {
